Updates from Overleaf

--- a/GSA-journal-template.tex
+++ b/GSA-journal-template.tex
@@ -37,7 +37,7 @@
 Please see additional guidelines notes on preparing your abstract below.
 \end{abstract}
 
-\keywords{Genome Environment Association; Soil Phosphorus; Maize, Sorghum}
+\keywords{Genome Environment Association; Soil Phosphorus; Maize; Sorghum}
 
 \dates{\rec{xx xx, xxxx} \acc{xx xx, xxxx}}
 
