Added Fig1_SoilMap.png, collection points and histogram.

--- a/GSA-journal-template.tex
+++ b/GSA-journal-template.tex
@@ -105,7 +105,7 @@ Figure \ref{fig:SoilMap} shows an example figure.
 
 \begin{figure*}[ht]
 \centering
-\includegraphics[width=0.8\paperwidth]{Figures/Fig1_SoilMap.jpg}
+\includegraphics[width=0.8\paperwidth]{Figures/Fig1_SoilMap.png}
 \caption{Phosphorus Distribution For Maize And Sorghum Samples}
 %Example figure from \url{10.1534/genetics.114.173807}. Please include your figures in the manuscript for the review process. You can upload figures to Overleaf via the Project menu. Images of photographs or paintings can be provided as raster images. Common examples of raster images are .tif/.tiff, .raw, .gif, and .bmp file types. The resolution of raster files is measured by the number of dots or pixels in a given area, referred to as “dpi” or “ppi.”
 % \begin{itemize}
